<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bk"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".viewUi.MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="15pt" />

    <Button
        android:id="@+id/m_insert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="15dp"
        android:background="#FD8A0D"
        android:text="@string/add"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/m_delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/m_insert"
        android:layout_marginTop="15dp"
        android:background="#FD8A0D"
        android:text="@string/delete"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/m_select"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/m_set"
        android:layout_marginTop="15dp"
        android:background="#FD8A0D"
        android:text="@string/select"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/m_set"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/m_delete"
        android:layout_marginTop="15dp"
        android:background="#FD8A0D"
        android:text="@string/update"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/m_quit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/m_select"
        android:layout_marginTop="15dp"
        android:background="#FD8A0D"
        android:text="@string/quit"
        android:textColor="#FFFFFF" />

</RelativeLayout>